# google-photos-takeout-organizer

./: .gitignore  Cargo.toml  README.md
src/: date_utils.rs  fs_ops.rs  main.rs  metadata.rs  model.rs  ui.rs
src/gallery/: builder.rs  images.rs  media.rs  mod.rs  throttle.rs  traversal.rs  utils.rs  videos.rs
src/gallery/templates/: directory_card.html  header.html  modal.html  photo_card.html  script.js  styles.css  toggle_btn.html
src/html/: builder.rs  mod.rs  utils.rs
src/html/templates/: header.html  modal.html  photo_card.html  script.js  styles.css
src/organizer/: date_utils.rs  fs_ops.rs  metadata.rs  mod.rs  ui.rs
