[package]
name = "google-photos-takeout-organizer"
version = "0.3.0"
edition = "2024"
authors = ["Raul Tovar <raultov@protonmail.com>"]
description = "A high-performance tool to organize Google Photos Takeout archives into a chronological folder structure."
readme = "README.md"
repository = "https://github.com/raultov/google-photos-takeout-organizer"
license = "MIT"
keywords = ["google-photos", "organizer", "backup", "takeout", "cli"]
categories = ["command-line-utilities", "filesystem", "multimedia::images"]
exclude = [".gitignore"]

[dependencies]
# Error handling
anyhow = "1.0.101"

# Date and time manipulation
chrono = "0.4.43"

# Command line argument parsing
clap = { version = "4.5.58", features = ["derive"] }

# Logging
env_logger = "0.11.9"
log = "0.4.29"

# EXIF metadata reading
exif = { package = "kamadak-exif", version = "0.6.1" }

# Regular expressions
regex = "1.12.3"

# Serialization/Deserialization (for JSON metadata)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Filesystem traversal
walkdir = "2.5.0"

# Progress bar
indicatif = "0.18.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
